// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AutoComplete/demo/advance.md correctly 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete"
  style="width:154px"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        placeholder="请输入..."
        tabindex="0"
        value="Beijing"
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;

exports[`renders AutoComplete/demo/basic.md correctly 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete"
  style="width:154px;margin-right:20px"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        placeholder="Please Enter"
        tabindex="0"
        value=""
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;

exports[`renders AutoComplete/demo/custom-input.md correctly 1`] = `
<textarea
  class="arco-textarea arco-autocomplete"
  placeholder="Customize this with your words"
  style="width:320px;height:80px"
  suffix="[object Object]"
  tabindex="0"
/>
`;

exports[`renders AutoComplete/demo/options.md correctly 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete"
  style="width:154px"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        placeholder="Please Enter"
        tabindex="0"
        value=""
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;

exports[`renders AutoComplete/demo/strict.md correctly 1`] = `
<div>
  <div
    class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete"
    style="width:154px"
  >
    <span
      class="arco-input-group"
    >
      <span
        class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
      >
        <input
          class="arco-input arco-input-size-default"
          placeholder="Input \`B\`"
          tabindex="0"
          value=""
        />
        <span
          class="arco-input-group-suffix"
        >
          <i />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders AutoComplete/demo/with-group.md correctly 1`] = `
<div>
  <div
    class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-search arco-autocomplete"
    style="width:320px"
  >
    <span
      class="arco-input-group"
    >
      <span
        class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
      >
        <input
          class="arco-input arco-input-size-default"
          placeholder="Please Enter"
          tabindex="0"
          value=""
        />
        <span
          class="arco-input-group-suffix"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-search"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders AutoComplete/demo/without-group.md correctly 1`] = `
<div>
  <div
    class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-input-search arco-autocomplete"
    style="width:320px"
  >
    <span
      class="arco-input-group"
    >
      <span
        class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
      >
        <input
          class="arco-input arco-input-size-default"
          placeholder="Please Enter"
          tabindex="0"
          value=""
        />
        <span
          class="arco-input-group-suffix"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-search"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M33.072 33.071c6.248-6.248 6.248-16.379 0-22.627-6.249-6.249-16.38-6.249-22.628 0-6.248 6.248-6.248 16.379 0 22.627 6.248 6.248 16.38 6.248 22.628 0Zm0 0 8.485 8.485"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;
